@@ -1,0 +1,262 @@
+<!doctype html>
+<html lang="en">
+<!--
+The access-denied.html page is one of the two pages which is not 
+password protected. It is the page that handles unauthorized access 
+to password protected pages. It has an access denied message but 
+is otherwise identical to the index.html page. 
+
+Copyright (c) 2014 Richard E. Price under the The MIT License.
+A copy of this license can be found in the LICENSE.text file.
+-->
+  <head>
+    <meta charset="utf-8" />
+    <title>BOARD18 - Remote Play Tool For 18xx Style Games</title>
+    <link rel="shortcut icon" href="images/favicon.ico" >
+    <link rel="stylesheet" href="style/board18com-160521.css" />
+    <link rel="stylesheet" href="style/board18Index.css" />
+    <script type="text/javascript" src="scripts/jquery.js">
+    </script> 
+    <script type="text/javascript" src="scripts/sha256-min.js">
+    </script> 
+    <script type="text/javascript" src="scripts/board18com.js">
+    </script>
+    <script type="text/javascript" src="scripts/board18index.js">
+    </script>
+    <script type="text/javascript" >
+      $(function() {
+        $('.error').hide(); 
+        $('#pointer').hide(); 
+        $("#login").submit(function() {  
+          login();
+          return false;
+        }); // end login
+        $("#buttonx").click(function(){
+          $('#lostid form').slideDown(300);
+          return false;
+        }); // end buttonx click
+        $("#regbutton").click(function(){
+          $('#register .error').hide();
+          $('#register :password').val('');
+          $('#register :text').val('');
+          $('#register form').slideDown(300);
+          $("#newuser").focus();
+          return false;
+        }); // end regbutton click
+        $("#helpbutton").click(function(){
+          window.open(BD18.help, "HelpGuide");
+          return false;
+        }); // end helpbutton click
+        $("#buttony").click(function(){
+          $('#lostpw form').slideDown(300);
+          return false;
+        }); // end buttony click
+        $("#register").submit(function() {  
+          register();
+          return false;
+        }); // end register submit
+        $("#button3").click(function(){  //cancel register
+          $('#register form').slideUp(300);
+          return false;
+        }); // end button3 click
+        $("#lostid").submit(function() {  
+          lostid();
+          return false;
+        }); // end lostid submit
+        $("#button5").click(function(){
+          $('#lostid form').slideUp(300);
+          $('#login form').slideDown(300);
+          return false;
+        }); // end button5 click
+        $("#lostpw").submit(function() {  
+          lostpw();
+          return false;
+        }); // end lostid submit
+        $("#button7").click(function(){
+          $('#lostpw form').slideUp(300);
+          $('#login form').slideDown(300);
+          return false;
+        }); // end button5 click      
+        $("#content").click(function(){
+          $('#lostpw form').hide();
+          $('#lostid form').hide();
+          $('#register form').hide();
+        }); // end content click
+        $("#leftofpage").click(function(){
+          $('#lostpw form').hide();
+          $('#lostid form').hide();
+          $('#register form').hide();
+        }); // end leftofpage click
+       }); // end ready
+    </script>
+  </head>
+  <body>
+    
+    <div id="topofpage">
+      <div id="logo">
+        <img src="images/logo.png" alt="Logo"/> 
+      </div>
+      <div id="heading">
+        <h1>BOARD18 - Remote Play Tool For 18xx Style Games</h1>
+      </div>
+      <div>
+        <p id="lognote"></p>
+      </div>
+    </div>
+    
+    <div id="leftofpage">
+
+    </div>
+    
+    <div id="rightofpage"> 
+      <div id="login">
+        <form name="login" action="">
+          <fieldset>
+            <p style="font-size: 130%">Login to BOARD18</p>
+            <p>
+              <label for="username">Player ID:</label>
+              <input type="text" name="username" id="username">
+              <label class="error" for="username" id="name_error">
+                This field is required.</label>
+            </p>
+            <p>
+              <label for="password">Password: </label>
+              <input type="password" name="password" id="password">
+              <label class="error" for="password" id="password_error">
+                This field is required.</label>
+            </p>
+            <p>
+              <input type="submit" name="pwbutton" class="pwbutton" 
+                     id="button1" value="Login" >
+              <label class="error" for="button1" id="signon_error">
+                Username or password is invalid.</label>
+            </p>
+            <p>
+              <input type="button" name="regbutton" class="pwbutton" 
+                     id="regbutton" value="Register" >
+              <input type="button" name="helpbutton" class="pwbutton" 
+                     id="helpbutton" value="Help" >
+            </p>
+            <p>
+              <input type="button" name="lostbuttonx" class="pwbutton" 
+                     id="buttonx" value="Forgot your Player ID?" >
+              <input type="button" name="lostbuttony" class="pwbutton" 
+                     id="buttony" value="Forgot your Password?" >
+            </p>
+          </fieldset>
+        </form>
+      </div>
+      <div id="register">
+        <form name="register" class="hideform" action="">
+          <fieldset>
+            <p style="font-size: 130%">Register your Player ID</p>
+            <p>
+              <label for="newuser">Enter Player ID:</label>
+              <input type="text" name="newuser" id="newuser" class="reg">
+              <label class="error" for="newuser" id="newuser_error">
+                This field is required.</label>
+            </p>
+            <p>
+              <label for="passwrd1">Enter Password: </label>
+              <input type="password" name="passwrd1" id="passwrd1"
+                     autocomplete="off">
+              <label class="error" for="passwrd1" id="passwrd1_error">
+                This field is required.</label>
+            </p>
+            <p>
+              <label for="passwrd2">Reenter Password: </label>
+              <input type="password" name="passwrd2" id="passwrd2"
+                     autocomplete="off">
+              <label class="error" for="passwrd2" id="passwrd2_error">
+                Password field mismatch.</label>
+            </p>
+            <p>
+              <label for="email">Enter Email Address: </label>
+              <input type="text" name="email" id="email" class="reg">
+              <label class="error" for="email" id="email_error">
+                This field is required.</label>
+            </p>
+            <p style="font-size: 130%">Optional Fields: </p>
+            <p>
+              <label for="fname">Enter First Name: </label>
+              <input type="text" name="fname" id="fname" class="reg">
+            </p>
+            <p>
+              <label for="lname">Enter Last Name: </label>
+              <input type="text" name="lname" id="lname" class="reg">
+            </p>
+            <p>
+              <input type="submit" name="regbutton" class="pwbutton"  
+                     id="button2" value="Register" >
+              <input type="button" name="canbutton" class="pwbutton"  
+                     id="button3" value="Cancel" >              
+            </p>
+          </fieldset>
+        </form>
+      </div> 
+      <div id="lostid">
+        <form name="lostid" class="hideform" action="">
+          <fieldset>
+            <p style="font-size: 130%">
+              Enter the email address that we have on file for you
+              and your Player ID will be emailed to you.
+            </p>
+            <p>
+              <label for="email1">Email Address: </label>
+              <input type="text" name="email1" id="email1">
+              <label class="error" for="email1" id="email1_error">
+                This field is required.</label>
+            </p>
+            <p>
+              <input type="submit" name="regbutton1" class="pwbutton"  
+                     id="button4" value="Submit" >
+              <input type="button" name="canbutton1" class="pwbutton"  
+                     id="button5" value="Cancel" >              
+            </p>
+          </fieldset>
+        </form>
+      </div>
+      <div id="lostpw">
+        <form name="lostpw" class="hideform" action="">
+          <fieldset>
+            <p style="font-size: 110%">
+              Enter your Player ID and Email Address. <br>
+              A temporary Password will be emailed to you.
+            </p>
+            <p>
+              <label for="username1">Player ID:</label>
+              <input type="text" name="username1" id="username1">
+              <label class="error" for="username1" id="name1_error">
+                This field is required.</label>
+            </p>
+            <p>
+              <label for="email2">Email Address: </label>
+              <input type="text" name="email2" id="email2">
+              <label class="error" for="email2" id="email2_error">
+                This field is required.</label>
+            </p>
+            <p>
+              <input type="submit" name="regbutton2" class="pwbutton"  
+                     id="button6" value="Submit" >
+              <input type="button" name="canbutton2" class="pwbutton"  
+                     id="button7" value="Cancel" >              
+            </p>
+          </fieldset>
+        </form>
+      </div>   
+      <div id="content" style="padding-right: 10px">    
+        <h1 style="color: red">* * * ACCESS DENIED * * *<br/></h1>
+        <p style="color: red; width: 450px">
+          You may have attempted to access a game 
+          without first logging in to the BOARD18 system.  
+          This is not allowed. <br>Or your session may have timed out 
+          due to inactivity.</p>
+        <p style="color: red; font-size: larger; width: 450px">
+          You can log in to the 
+          BOARD18 system or acquire a BOARD18 player account [Register] 
+          by using the form to the right.</p>
+      </div> 
+    </div>  
+
+  </body>
+</html>
